# PointCloud-SSDR-ActiveLearning

./: README.md
SSDR_AL_s3dis/: RandLANet.py  base_op.py  fps_gcn_cpu.py  gcn.py  helper_tf_util.py  helper_tool.py  rebuttal_run.sh  run_graph_reasoning_analysis.sh  run_sota_comparison.sh  run_threshold_analysis.sh  s3dis_dataset.py  s3dis_dataset_test.py  sampler2.py  ssdr_create_baseline.py  ssdr_create_seed.py  ssdr_main_S3DIS2.py  ssdr_max_dominant.py
SSDR_AL_s3dis/partition/: compute_superpoint.py  compute_superpoint_semantic3d.py  compute_superpoint_semantickitti.py  graphs.py  helper_ply.py  partition.py  provider.py  visualize.py  write_Semantic3d.py
SSDR_AL_s3dis/partition/ply_c/: CMakeLists.txt  FindNumPy.cmake  connected_components.cpp  ply_c.cpp  random_subgraph.cpp
SSDR_AL_s3dis/utils/: 6_fold_cv.py  data_prepare_s3dis.py  data_prepare_semantic3d.py  data_prepare_semantickitti.py  download_semantic3d.sh  semantic-kitti.yaml  ssdr_data_prepare_semantickitti.py
SSRD_AL_semantic3d/: RandLANet.py  base_op.py  fps_gcn_cuda.py  gcn.py  helper_ply.py  helper_tf_util.py  helper_tool.py  kcenterGreedy.py  run_add_t200.sh  run_semantic3d_0.012.sh  sampler2.py  semantic3d_dataset_sampling.py  semantic3d_dataset_test3.py  semantic3d_dataset_train.py  ssdr_create_baseline.py  ssdr_create_seed.py  ssdr_main_semantic3d.py  ssdr_max_dominant.py
SSRD_AL_semantic3d/chamfer3D/: chamfer3D.cu  chamfer_cuda.cpp  dist_chamfer_3D.py
SSRD_AL_semantic3d/partition/: compute_superpoint.py  compute_superpoint_semantic3d.py  graphs.py  helper_ply.py  partition.py  provider.py  (+2 more)
(+67 files in other folders)
